# libs-gsgd

./: .cvsignore  ChangeLog  GDColor.h  GDCom.h  GDGIFImage.h  GDGIFImage.m  GDGIFPlot.h  GDGIFPlot.m  GDGIFPlotDefaultGraph.plot-graph  GDImage.h  GDPlot.h  GDPlot.m  GDSimpleFont.m  GNUmakefile  Makefile.postamble  Makefile.preamble  README  config.make.in  configure  configure.in
Examples/: .cvsignore  GNUmakefile  ReadFile.m  WriteBarChart.java  WriteBarChart.m  WriteFile.m  WritePie.java  WritePie.m  WritePlot.java  WritePlot.m
Headers/gsgd/: GD.h  GDBarChart.h  GDBinDataSet.h  GDColor.h  GDCom.h  GDFont.h  GDFrame.h  GDImage.h  GDLegendBox.h  GDLineStyle.h  GDPieChart.h  GDPlot.h  GDSimpleFont.h
Source/: .cvsignore  GDBarChart.m  GDBinDataSet.m  GDColor.m  GDFont.m  GDFrame.m  GDImage.m  GDLegendBox.m  GDLineStyle.m  GDPieChart.m  GDPlot.m  GNUmakefile  GNUmakefile.wrapper.objc.preamble  gsgd.jigs
